# ChangeLog for sci-chemistry/probe
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/probe/ChangeLog,v 1.7 2008/07/08 01:25:50 dberkholz Exp $

  08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  probe-2.12.071128.ebuild:
  Fix minor syntax errors.

*probe-2.12.071128 (08 Jul 2008)

  08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +probe-2.12.071128.ebuild:
  (#231108) Bump. Keyword ~amd64.

  20 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  (#148281) Change herd to sci-chemistry from sci.

  05 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Remove myself as maintainer, anyone feel free to work on this, although I'll
  continue to do so as well.

  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  probe-2.11.050121.ebuild:
  x86/ppc stable.

  07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update to my new email address.

*probe-2.11.050121 (04 Jun 2006)

  04 Jun 2006; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml,
  +probe-2.11.050121.ebuild:
  New program that evaluates atomic packing within or between molecules.
