@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/reduce/reduce-3.13.080428.ebuild,v 1.1 2008/07/07 06:06:01 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/reduce/reduce-3.13.080428.ebuild,v 1.2 2009/05/29 00:43:56 dberkholz Exp $
 
 # If you want to fix the warnings about friend declaration 'foo' declared as
 # a non-template function, see http://gcc.gnu.org/faq.html#friend.
@@ -13,7 +13,7 @@ HOMEPAGE="http://kinemage.biochem.duke.edu/software/reduce.php"
 SRC_URI="http://kinemage.biochem.duke.edu/downloads/software/reduce31/${MY_P}.tgz"
 LICENSE="richardson"
 SLOT="0"
-KEYWORDS="~ppc ~x86 ~amd64"
+KEYWORDS="amd64 ~ppc ~x86"
 IUSE=""
 RDEPEND=""
 DEPEND="${RDEPEND}
