@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/probe
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/probe/ChangeLog,v 1.7 2008/07/08 01:25:50 dberkholz Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/probe/ChangeLog,v 1.8 2009/05/29 00:44:23 dberkholz Exp $
+
+  29 May 2009; Donnie Berkholz <dberkholz@gentoo.org>;
+  probe-2.12.071128.ebuild:
+  Stable on amd64.
 
   08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
   probe-2.12.071128.ebuild:
